@startuml ClassDiagram

title Class diagram of the logic in padelApp
!define List java.util.List !define ArrayList java.util.ArrayList

class Player {
    {field} String name
    {field} int age
    {field} int wins
    {method} Player(String name, int age)
    {method} void addwins()
    {method} String getName()
    {method} int getAge()
    {method} int getWins()
    {method} void setWins(int wins)
}

class PlayerPair {
    {field} Player player1
    {field} Player player2
    {method} PlayerPair(Player player1, Player player2)
    {method} List<PlayerPair> createPlayerPairs(List<Player> players)
    {method} Player getPlayer1()
    {method} Player getPlayer2()
}

class CreatePlayerPairs {
    {field} List<Player> playerList = new ArrayList<>()
    {field} List<PlayerPair> PlayerPairslist = new ArrayList<>()
    {method} CreatePlayerPairs(List<Player> playerlist)
    {method} void addPlayer(Player player)
    {method} void createPlayerPairs(List<Player> players)
    {method} List<PlayerPair> getPlayerPairs()
}

class PlayerComparator {
    {method} int compare(Player o1, Player o2)
}

PlayerPair -- Player
CreatePlayerPairs -- Player
CreatePlayerPairs -- PlayerPair

@enduml
